# interfacebacteria.github.io

./: .dockerignore  .gitignore  Data_from_countries_export.csv  Dockerfile  README.md  app.py  docker-compose.yml  environment.yml  generate_pdf_plots.py  notas.md  pyproject.toml  requirements.txt
code/: archivo.txt
code/Platform/: Biology.csv  MAtrix_differences_abio.csv  MAtrix_identity_abio.csv  Vegetation.csv  app.py  datosPaisesFrecuencia.csv  funcionesYDatos.py  generar_figuras_pdf.py
code/Vis/: RadarChart.ipynb
code/etl/: 05_PreProcessing_Data.ipynb  1_retrieve_seqs.pl
dashboard/: __init__.py  funcionesYDatos.py
data/processed/: biology.csv  vegetation.csv
notebooks/etl/: 04_Processing_QC.ipynb  05_Harmonization.ipynb  05_PreProcessing_Data_Host-Sources.ipynb  1_retrieve_seqs.pl  2_GBK_ToDataframe.ipynb  3_Parse_Taxonomy.ipynb
notebooks/visualization/: MapSliderGlobal.ipynb
